--- a/SQL-E-KNEX/docker-compose.yml
+++ b/SQL-E-KNEX/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
       - --innodb_force_recovery=0
-    volumes: 
-      - ~/Documentos/GitHub/Meus projetos/projeto_Registro_BancoDeDados:/var/lib/mysql
+    volumes:   
+      - /home/isaque/Documentos/GitHub/ProjetosPessoais/projeto_Registro_BancoDeDados:/var/lib/mysql
     ports:
       - 3306:3306
     environment:
